--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile group: 'org.webjars', name: 'jquery', version: '3.4.0'
     compile group: 'org.webjars', name: 'bootstrap', version: '4.3.1'
     compile group: 'org.webjars', name: 'webjars-locator', version: '0.36'
+    compile group: 'org.webjars.bower', name: 'js-cookie', version: '2.2.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
