--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compile group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.1.4.RELEASE'
-    compile group: 'org.webjars', name: 'jquery', version: '3.4.0'
-    compile group: 'org.webjars', name: 'bootstrap', version: '4.3.1'
-    compile group: 'org.webjars', name: 'webjars-locator', version: '0.36'
-    compile group: 'org.webjars.bower', name: 'js-cookie', version: '2.2.0'
+    implementation group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.1.4.RELEASE'
+    implementation group: 'org.webjars', name: 'jquery', version: '3.4.0'
+    implementation group: 'org.webjars', name: 'bootstrap', version: '4.3.1'
+    implementation group: 'org.webjars', name: 'webjars-locator', version: '0.36'
+    implementation group: 'org.webjars.bower', name: 'js-cookie', version: '2.2.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
