--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,26 @@
 spring:
   application:
     name: oauth2-example
+#  security:
+#    oauth2:
+#      client:
+#        registration:#          authz-server:
+#            client-id: SampleClientId
+#            client-secret: secret
+#        provider:
+#          authz-server:
+#            token-uri: http://localhost:8081/auth/oauth2/v1/token
+#            authorization-uri: http://localhost:8081/auth/oauth2/v1/authorize
+#            user-info-uri: http://localhost:8081/auth/oauth2/v1/userinfo
+security:
+  oauth2:
+    client:
+      clientId: SampleClientId
+      clientSecret: secret
+      accessTokenUri: http://localhost:8081/auth/oauth/token
+      userAuthorizationUri: http://localhost:8081/auth/oauth/authorize
+    resource:
+      userInfoUri: http://localhost:8081/auth/user/me
 #security:
 #  oauth2:
 #    client:
@@ -11,12 +31,3 @@ spring:
 #      clientAuthenticationScheme: form
 #    resource:
 #      userInfoUri: https://api.github.com/user
-security:
-  oauth2:
-    client:
-      clientId: SampleClientId
-      clientSecret: secret
-      accessTokenUri: http://localhost:8081/auth/oauth/token
-      userAuthorizationUri: http://localhost:8081/auth/oauth/authorize
-    resource:
-      userInfoUri: http://localhost:8081/auth/user/me      
